Changing the MONTHS_COLLECTION array, refactoring the display of the current day, and adding the display of the next 3 days from the current one.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="weather__forecast">
                   <div class="weather__forecast-day">
-                    <p class="weather__forecast-day-name">Tuesday</p>
+                    <p class="weather__forecast-day-name first-day">Tuesday</p>
                     <div class="weather__forecast-day-wrap">
                       <p class="weather__forecast-temp day1-temp">7°</p>
                       <img
@@ -69,7 +69,9 @@
                     </div>
                   </div>
                   <div class="weather__forecast-day">
-                    <p class="weather__forecast-day-name">Wednesday</p>
+                    <p class="weather__forecast-day-name second-day">
+                      Wednesday
+                    </p>
                     <div class="weather__forecast-day-wrap">
                       <p class="weather__forecast-temp day2-temp">6°</p>
                       <img
@@ -80,7 +82,7 @@
                     </div>
                   </div>
                   <div class="weather__forecast-day">
-                    <p class="weather__forecast-day-name">Thursday</p>
+                    <p class="weather__forecast-day-name last-day">Thursday</p>
                     <div class="weather__forecast-day-wrap">
                       <p class="weather__forecast-temp day3-temp">3°</p>
                       <img
