--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
           <div class="content">
             <div class="content-info">
               <div class="content-info_place__date">
-                <div class="place"><h1>MINSK, BELARUS</h1></div>
+                <div class="place">
+                  <h1 class="place-City">MINSK</h1>
+                  <h1 class="place-Country">Belarus</h1>
+                </div>
                 <div class="date-time">
                   <h3 class="date">Mon 28 October</h3>
                   <h3 class="time">17:23</h3>
@@ -101,9 +104,8 @@
               </div>
             </div>
             <div class="content-map">
-              <div class="map-img">
-                <div id="map" class="map"></div>
-              </div>
+              <div id="map" class="map"></div>
+
               <div class="latitude-langitude__wrap">
                 <h2 class="latitude-text">latitude:53° 54'</h2>
                 <h2 class="longitude-text">longitude:27° 34'</h2>
