Remove node_modules from repository

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           <div class="content-info">
             <div class="content-info_place__date">
               <div class="place">
-                <h1 class="place-City">MINSK</h1>
-                <h1 class="place-Country">Belarus</h1>
+                <h1 class="place-city">MINSK</h1>
+                <h1 class="place-country">Belarus</h1>
               </div>
               <div class="date-time">
                 <h3 class="date">Mon 28 October</h3>
