add Weathericons component

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
               </div>
               <div class="content-info_weather">
                 <div class="content-info_weather__temperature">
-                  <h1>10°</h1>
+                  <h1 class="current-temp_content">10°</h1>
                 </div>
 
                 <div class="content-info_weather__img">
-                  <img src="./img/Group 26.png" alt="" />
+                  <img id="current-img" src="./img/Group 26.png" alt="" />
                 </div>
 
                 <div class="content-info_weather__characteristics">
@@ -71,6 +71,7 @@
                     <img
                       src="./img/cloud.png"
                       alt="Cloudy"
+                      id="first-day_img"
                       class="weather__forecast-icon"
                     />
                   </div>
@@ -81,6 +82,7 @@
                     <p class="weather__forecast-temp second-day_temp">6°</p>
                     <img
                       src="./img/cloud.png"
+                      id="second-day_img"
                       alt="Cloudy"
                       class="weather__forecast-icon"
                     />
@@ -92,6 +94,7 @@
                     <p class="weather__forecast-temp last-day_temp">3°</p>
                     <img
                       src="./img/cloud.png"
+                      id="last-day_img"
                       alt="Cloudy"
                       class="weather__forecast-icon"
                     />
