Attempt to implement translation functionality without using third-party APIs.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
           <div class="button-panel">
             <button class="refresh-button"></button>
             <div class="lang-box">
-              <button class="lang-en">EN ⋁</button>
-              <button class="lang-ru">RU</button>
+              <button class="lang-en">EN</button>
             </div>
             <div class="temperature-box">
               <button class="fahrenheit">°F</button>
