Removed unnecessary identifiers.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="content-info_weather__img">
-                  <img id="current-img" src="./img/Group 26.png" alt="" />
+                  <img class="current-img" src="./img/Group 26.png" alt="" />
                 </div>
 
                 <div class="content-info_weather__characteristics">
@@ -70,8 +70,7 @@
                     <img
                       src="./img/cloud.png"
                       alt="Cloudy"
-                      id="first-day_img"
-                      class="weather__forecast-icon"
+                      class="first-day_img"
                     />
                   </div>
                 </div>
@@ -81,9 +80,8 @@
                     <p class="weather__forecast-temp second-day_temp">6°</p>
                     <img
                       src="./img/cloud.png"
-                      id="second-day_img"
                       alt="Cloudy"
-                      class="weather__forecast-icon"
+                      class="second-day_img"
                     />
                   </div>
                 </div>
@@ -93,9 +91,8 @@
                     <p class="weather__forecast-temp last-day_temp">3°</p>
                     <img
                       src="./img/cloud.png"
-                      id="last-day_img"
                       alt="Cloudy"
-                      class="weather__forecast-icon"
+                      class="last-day_img"
                     />
                   </div>
                 </div>
