Refactoring the code together with a mentor, fixing the implementation of HTML blocks and elements for weather-future.

--- a/index.html
+++ b/index.html
@@ -67,12 +67,10 @@
                 </div>
               </div>
               <div class="weather-future">
-                <div class="weather-future__day">
-                  <p class="weather-future__day-name first-day">Tuesday</p>
-                  <div class="weather-future__day-wrap">
-                    <p class="weather-future__day-temperature first-day_temp">
-                      7°
-                    </p>
+                <div class="weather-future-day weather-future-day_first">
+                  <p class="weather-future-day__name">Tuesday</p>
+                  <div class="weather-future-day__wrap">
+                    <p class="weather-future-day__temperature">7°</p>
                     <img
                       src="./img/cloud.png"
                       alt="Cloudy"
@@ -80,12 +78,10 @@
                     />
                   </div>
                 </div>
-                <div class="weather-future__day">
-                  <p class="weather-future__day-name second-day">Wednesday</p>
-                  <div class="weather-future__day-wrap">
-                    <p class="weather-future__day-temperature second-day_temp">
-                      6°
-                    </p>
+                <div class="weather-future-day weather-future-day_second">
+                  <p class="weather-future-day__name">Wednesday</p>
+                  <div class="weather-future-day__wrap">
+                    <p class="weather-future-day__temperature">6°</p>
                     <img
                       src="./img/cloud.png"
                       alt="Cloudy"
@@ -93,12 +89,10 @@
                     />
                   </div>
                 </div>
-                <div class="weather-future__day">
-                  <p class="weather-future__day-name last-day">Thursday</p>
-                  <div class="weather-future__day-wrap">
-                    <p class="weather-future__day-temperature last-day_temp">
-                      3°
-                    </p>
+                <div class="weather-future-day weather-future-day_last">
+                  <p class="weather-future-day__name">Thursday</p>
+                  <div class="weather-future-day__wrap">
+                    <p class="weather-future-day__temperature">3°</p>
                     <img
                       src="./img/cloud.png"
                       alt="Cloudy"
